--- a/functions/package.json
+++ b/functions/package.json
@@ -1,20 +1,27 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
+  "main": "lib/index.js",
   "scripts": {
-    "serve": "firebase serve --only functions",
     "shell": "firebase experimental:functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "lint": "./node_modules/.bin/tslint -p tsconfig.json",
+    "build": "./node_modules/.bin/tsc",
+    "watch": "./node_modules/.bin/tsc --watch",
+    "serve": "firebase serve --only functions"
   },
   "dependencies": {
-    "firebase-admin": "~5.4.2",
-    "firebase-functions": "^0.7.1",
+    "@types/express": "^4.11.1",
+    "@types/firebase": "^3.2.1",
     "amazon-product-api": "^0.4.4",
     "cors": "^2.8.4",
     "express": "^4.15.3",
-    "request": "^2.81.0"
+    "firebase-admin": "~5.4.2",
+    "firebase-functions": "^0.7.1",
+    "request": "^2.81.0",
+    "typescript": "^2.7.2"
   },
   "private": true
 }
