--- a/functions/package.json
+++ b/functions/package.json
@@ -18,9 +18,11 @@
     "amazon-product-api": "^0.4.4",
     "cors": "^2.8.4",
     "express": "^4.15.3",
-    "firebase-admin": "~5.4.2",
-    "firebase-functions": "^0.7.1",
-    "request": "^2.81.0",
+    "firebase-admin": "^5.9.1",
+    "firebase-functions": "^0.8.1",
+    "firebase-tools": "^3.17.4",
+    "oauth": "^0.9.15",
+    "request": "^2.83.0",
     "typescript": "^2.7.2"
   },
   "private": true
