--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "css-loader": "^0.28.10",
     "elm": "^0.18.0",
     "elm-webpack-loader": "^4.3.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
@@ -34,5 +34,8 @@
     "webpack": "^2.3.1",
     "webpack-dev-server": "^2.4.2",
     "webpack-merge": "^4.1.0"
+  },
+  "dependencies": {
+    "oauth": "^0.9.15"
   }
 }
